# YoukeBox-rust

./: .directory  .env.dist  .env_example  .gitignore  Cargo.toml  Dockerfile  Jenkinsfile  Makefile  README.md  Rocket.toml  Rocket.toml.dist  env.dist
migrations/20170812124604_create_videos/: down.sql  up.sql
migrations/20170817081052_create_rooms/: down.sql  up.sql
src/: http.rs  lib.rs  main.rs  models.rs  player.rs  playlist.rs  room.rs  routes.rs  schema.rs  user.rs  video.rs  youtube.rs
tests/: integration_test.rs
