[package]
name = "youkebox"
description= "YoukeBox, a better way to create live playlists"
version = "0.1.0"
authors = ["bart <bwillems@protonmail.com>"]
license = "GPL-3.0"
repository = "https://github.com/BartWillems/YoukeBox-rust"
readme = "README.md"
categories = ["web-programming"]

[dependencies]
bcrypt = "0.1.4"
chrono = "0.4"
clippy = {version = "0.0", optional = true}
diesel = { version = "0.99", features = ["postgres"] }
diesel_infer_schema = { version = "0.99", features = ["postgres"] }
dotenv = "0.9.0"
dotenv_macros = "0.10.0"
lazy_static = "0.2"
r2d2 = "0.8"
r2d2-diesel = "0.99"
reqwest = "0.8.0"
rocket = "0.3.3"
rocket_codegen = "0.3.3"
rocket_contrib = "0.3.3"
rocket_cors = "0.2.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[badges]
maintenance = { status = "actively-developed" }

[features]
default = []