[package]
name = "youkebox"
description= "YoukeBox, a better way to create live playlists"
version = "0.1.0"
authors = ["bart <bwillems@protonmail.com>"]
license = "GPL-3.0"
repository = "https://github.com/BartWillems/YoukeBox-rust"
readme = "README.md"
categories = ["web-programming"]

[dependencies]
bcrypt = "0.1.4"
bytes = "0.4"
chrono = "0.4"
clippy = {version = "0.0", optional = true}
diesel = { version = "1.0", features = ["postgres"] }
diesel_infer_schema = { version = "1.0", features = ["postgres"] }
dotenv = "0.10"
dotenv_macros = "0.10.0"
image = "0.18"
lazy_static = "1.0"
r2d2 = "0.8"
r2d2-diesel = "1.0"
regex = "0.2"
reqwest = "0.8"
rocket = "0.3.6"
rocket_codegen = "0.3.6"
rocket_cors = "0.2.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.rocket_contrib]
version = "0.3.6"
default-features = false
features = [ "json" ]

[profile.release]
lto = true

[badges]
maintenance = { status = "actively-developed" }

[features]
default = []
